--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "BlockchainAttributesAttestation"
+name = "attributes_attestation"
 version = "0.1.0"
 edition = "2024"
 
@@ -7,7 +7,5 @@ edition = "2024"
 chrono = { version = "0.4.41", features = ["serde"] }
 ed25519-dalek = { version = "2.1.1", features = ["rand_core"]}
 rand = "0.8"
-hex = "0.4.3"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
 sha2 = "0.10.9"
+uuid = { version = "1.17.0", features = ["v4"] }
