--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+base64 = "0.22.1"
 chrono = { version = "0.4.41", features = ["serde"] }
 ed25519-dalek = { version = "2.1.1", features = ["rand_core"]}
+hex = "0.4.3"
 rand = "0.8"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 sha2 = "0.10.9"
-uuid = { version = "1.17.0", features = ["v4"] }
+uuid = { version = "1.17.0", features = ["serde", "v4"] }
