--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-base64 = "0.22.1"
 chrono = { version = "0.4.41", features = ["serde"] }
-ed25519-dalek = { version = "2.1.1", features = ["rand_core"]}
+clap = { version = "4.5.39", features = ["derive"] }
+ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
 hex = "0.4.3"
 rand = "0.8"
 serde = { version = "1.0.219", features = ["derive"] }
